#summary Changelog for all changes since the fork

= Changes =
== Version 1.01 ==
  * Automatically fetch all new articles for all feeds on startup, can take a moment but you can just start browsing anyway
  * Improved marking articles as read, not sure if everything is fixed but counts should be allright most of the time now
  * Minor improvements

== Version 1.0 ==
  * Added versionCode to StackTrace-Mails
  * Added safety-queries for failed DB operations
  * Fixed Feeds beeing displayed as read after opening
  * Fixed NPE when using old (pre 2.0) Service-API
  * Think we are in a pretty stable state now so I switched to Version 1.0
  * Minor Bugs fixed
  * More minor Bugs fixed

== Version 0.9.7 ==
  * Fixed some bugs introduced with 0.9.6
  * Added compatibility-fixes for Android 3.0
  * Changed some DB-Operations, added SQLite-Vacuum to free space
  * Added preferences to delete Database on startup
  * Hopefully no more stale articles, unread-state should be completely synchronized now
  * Fixed Error-Messages not beeing displayed with Server v1.5.3
  * Fixed POST-Data not beeing interpreted correctly by the server, now sending JSON-encoded data
  * Two more bugs with starred/published articles fixed
  * Fixed OutOfMemoryException when opening virtual categories
  * Fixed ImageCache with non-standard HTML, fixed SQLiteException with broken SQLite on some Devices

== Version 0.9.6 ==
  * Show read articles when browsing "only unread articles" and entering an empty feed (eg. by returning from the last unread article)
  * Minor refactoring and changes due to release of Tiny Tiny RSS 1.5.3 (POST-Requests, Attachments in getHeadlines)
  * Added check for corrupted DB, it is moved to a backup-file and a new DB will be created
  * Show last-opened article/feed when returning from child-view, even if read content is filtered
  * Improved speed of update when using long-press on category -> "Show all articles"