@@ -4,6 +4,7 @@
 == Version 1.01 ==
   * Automatically fetch all new articles for all feeds on startup, can take a moment but you can just start browsing anyway
   * Improved marking articles as read, not sure if everything is fixed but counts should be allright most of the time now
+  * Fixed swipe in Headline-List (go to next/previous feed by swipe or volume-button)
   * Minor improvements
 
 == Version 1.0 ==
